--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
-group 'com.agonyengine'
-version '0.2.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'application'
+}
 
-apply plugin: 'java'
+group 'com.agonyengine'
+version '0.2.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -11,5 +14,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
+}
+
+application {
+    mainClass = 'com.agonyengine.noise.Main'
 }
